# derp_control

./: .gitignore  LICENSE  MCT_Testing.ipynb  README.md  S122C_Responsivity.csv  Zaber_control.md  air_calibration.ipynb  bad_pix_analysis.ipynb  bad_pix_module.py  bad_pix_testing.ipynb  demo.ipynb  e_to_x.fits  getting_started.ipynb  image_selection.json  load_and_reduce_data.py  measure_polychromatic.py  photodiode_calibration.ipynb  photodiode_calibration_JHK_waveplate.ipynb  prototype_calibration.ipynb  pyproject.toml  test_zaber_interface.py  wavelength_calibration.ipynb
Calibration/: DRRP_Calibration_Demo.ipynb
Q_reduction/: Q_reduction_demo.ipynb  drrp_functions.py
derp/: __init__.py  camera.py  derp_conf.py  motion.py
derpy/: .calibrate.py.swp  __init__.py  base_camera.py  binning.py  calibrate.py  camera.py  centering.py  data_reduction.py  derpy_conf.py  experiments.py  fits_saving_tests.ipynb  gui.py  jacobi.py  mask.py  motion.py  photodiode_class.py  plotting.py  polynomials.py  writing.py  zernike.py
scripts/: 00_Reduce_Data_Photodiode.py  00_Run_VRRP_Measurement.py  animate_frames.py  dan_fits_data.py  dan_photodiode_data.py  dan_rotate_data.py  debug_ucsb.py  demo_fits_data.py  image_selection.json  max_likelihood.py  measure_polychromatic.py  measure_polychromatic_zaber.py  prior_image_selection.json  prototype_calibration.ipynb  prototype_fits_experiment.py  spatial_reduce_data.py  take_dark_images.py  test_photodiode_reduction.py  wavelength_calibration.ipynb  wollaston_retardance.py
tests/: test_camera.py  test_zaber.py
(+6 files in other folders)
