[project]
name = "derpy"
version = "0.1.0"
description = "Pythonic control for Dual-rotating-retarder Mueller polarimeters"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
authors = [
	{name = "Jaren N. Ashcraft", email="jarenashcraft@ucsb.edu"},
	{name = "William Melby", email="wcmelby@ucsb.edu"},
	{name = "Rebecca Zhang", email="manxuanzhang@ucsb.edu"},
	{name = "Ronald Lopez", email="ronlopez@ucsb.edu"},
	{name = "Briley Lewis", email="brileylewis@ucsb.edu"},
	{name = "Ryan Hersey", email="rhersey@ucsb.edu"},
	{name = "Courtney Duong"},
	{name = "Andy Zhou"},
]

keywords = ["mueller", "polarimetry", "data reduction", "hardware"]
dependencies = ["numpy", "scipy", "pylablib", "tqdm",
				"katsu", "configobj", "msgpack", "msgpack_numpy",
				"astropy"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Windows",	
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["derpy"]

[tool.pytest.ini_options]
pythonpath = [
	"."
]
